@@ -2,13 +2,24 @@ Title: TMDA In Use
 Links: overview-links.h usage-links.h support-links.h
 
 <h3>TMDA In Use</h3>
-The following sites use TMDA as part of a service offering.  If you'd
+The following sites use TMDA as part of a product or service offering.  If you'd
 like to be included in this list, please let me know.<br><br>
 
 <ul>
-<li><a href="http://myprivacy.ca/" TARGET="Resource Window">myprivacy.ca</a><br>
-<li><a href="http://my.gnus.org/" TARGET="Resource Window">my.gnus.org</a><br>
-<li><a href="http://mail.socha.net/" TARGET="Resource Window">mail.socha.net</a><br>
+
+<li><a href="http://www.nightskyent.com/Hosting/features.php" TARGET="Resource Window">
+NightSky Entertainment</a><br><br>
+
+<li><a href="http://myprivacy.ca/" TARGET="Resource Window">myprivacy.ca</a><br><br>
+
+<li><a href="http://my.gnus.org/" TARGET="Resource Window">my.gnus.org</a><br><br>
+
+<li><a href="http://mail.socha.net/" TARGET="Resource Window">mail.socha.net</a><br><br>
+
 <li><a href="http://www.paradigm-omega.com/spam.html" TARGET="Resource Window">Paradigm-Omega</a><br><br>
+
+<li>Mintersoft's <a href="http://www.mintercorp.com/vm_overview.htm" TARGET="Resource Window">VisualMail</a>
+is a web-based e-mail client with integrated TMDA functionality.<br><br>
+
 </ul>
 
