@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Mon Jan 14 18:49:35 2002 -->
+<!-- Tue Apr  9 11:14:04 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -133,14 +133,25 @@ Author
 <!-- start of body cell -->
 <TD VALIGN=TOP WIDTH="90%"><BR>
 <h3>TMDA In Use</h3>
-The following sites use TMDA as part of a service offering.  If you'd
+The following sites use TMDA as part of a product or service offering.  If you'd
 like to be included in this list, please let me know.<br><br>
 
 <ul>
-<li><a href="http://myprivacy.ca/" TARGET="Resource Window">myprivacy.ca</a><br>
-<li><a href="http://my.gnus.org/" TARGET="Resource Window">my.gnus.org</a><br>
-<li><a href="http://mail.socha.net/" TARGET="Resource Window">mail.socha.net</a><br>
+
+<li><a href="http://www.nightskyent.com/Hosting/features.php" TARGET="Resource Window">
+NightSky Entertainment</a><br><br>
+
+<li><a href="http://myprivacy.ca/" TARGET="Resource Window">myprivacy.ca</a><br><br>
+
+<li><a href="http://my.gnus.org/" TARGET="Resource Window">my.gnus.org</a><br><br>
+
+<li><a href="http://mail.socha.net/" TARGET="Resource Window">mail.socha.net</a><br><br>
+
 <li><a href="http://www.paradigm-omega.com/spam.html" TARGET="Resource Window">Paradigm-Omega</a><br><br>
+
+<li>Mintersoft's <a href="http://www.mintercorp.com/vm_overview.htm" TARGET="Resource Window">VisualMail</a>
+is a web-based e-mail client with integrated TMDA functionality.<br><br>
+
 </ul>
 
 
