@@ -1,3 +1,8 @@
+2002-04-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* inuse.ht (Links): Link to Mintersoft's VisualMail and NightSky
+	Entertainment.
+	
 2002-04-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* resources.ht (TARGET): Link to Gmane.
